# TerrainRLSim

./: .gitignore  Dockerfile  Main.cpp  Main.h  README.md  data.csv  deb_deps.sh  deb_deps_nogl.sh  premake4.lua  premake4_openglES.lua  premake4_osmesa.lua  requirements.txt  requirements2.txt  reset.txt
anim/: Character.cpp  Character.h  KinCharacter.cpp  KinCharacter.h  KinController.cpp  KinController.h  KinSimCharacter.cpp  KinSimCharacter.h  KinTree.cpp  KinTree.h  MocapDataBaseController.cpp  MocapDataBaseController.h  MocapStepController.cpp  MocapStepController.h  Motion.cpp
args/: envs.json  llc_eval_args.txt  show_mocap.txt  train_llc_args.txt
docker/: Dockerfile  Dockerfile_trl  build_and_push.sh  test_run_trl.sh
metrics/: data.csv
optimizer/: Main.cpp
render/: Camera.cpp  DrawCharacter.cpp  DrawCharacter.h  DrawGround.cpp  DrawMesh.cpp  DrawMesh.h  DrawSimCharacter.cpp  DrawSimCharacter.h  DrawUtil.cpp  DrawUtil.h  GBuffer.cpp  IBuffer.cpp  IBuffer.h  MeshUtil.cpp  MeshUtil.h  OBJLoader.h  PostProcessor.cpp  PostProcessor.h  RenderState.h  Shader.cpp  Shader.h  ShadowMap.cpp  SkyBox.cpp  SkyBox.h  TextureDesc.cpp  TextureDesc.h  TextureUtil.cpp  TextureUtil.h  VertexBuffer.cpp  VertexBuffer.h  matStack.h  opengl.h
scenarios/: AStarLite.cpp  AStarLiteClose.cpp  AStarLiteNode.cpp  AStarLiteOpen.cpp  DrawScenario.cpp  DrawScenario.h  DrawScenarioHikeGeneralEval.cpp  DrawScenarioHikeGeneralEval.h  DrawScenarioKinMotion.cpp  (+94 more)
scenarios/rockstar/cpp_code/: CMakeLists.txt  example_Optimization_main.cpp
scenarios/rockstar/cpp_code/cmake/: FindEigen3.cmake
(+26183 files in other folders)
